<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_characters"
        android:icon="@drawable/icon_rick"
        android:title="Characters" />

    <item
        android:id="@+id/menu_item_episodes"
        android:icon="@drawable/icon_episode"
        android:title="Episodes" />

    <item
        android:id="@+id/menu_item_locations"
        android:icon="@drawable/icon_location"
        android:title="Locations" />

</menu>
